fixed minor issue on footer that made it overlap with text(among some other things)

--- a/TPE1/css/footer.css
+++ b/TPE1/css/footer.css
@@ -1,9 +1,10 @@
-.footer {
+.footer 
+{
 	position: absolute;
 	text-align: center;
 	width: 100%;
 	height:30px;
 	font-size: 15px;
 	border-top: 1px solid #E19832;
-	bottom:0%;
+	top:100%;
 }
